[gd_scene load_steps=3 format=3 uid="uid://7if28dqjlfui"]

[ext_resource type="Script" path="res://PauseMenuManager.gd" id="1_0tsti"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6jgo"]
bg_color = Color(0.497788, 0.66368, 0.25706, 1)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0tsti")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o6jgo")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Label" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Pause"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LocationsVBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Gasometer" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/LocationsVBox"]
layout_mode = 2
text = "Gasometer"

[node name="Stefansplatz" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/LocationsVBox"]
layout_mode = 2
text = "Stefansplatz"

[node name="Lustenau" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/LocationsVBox"]
layout_mode = 2
text = "Lustenau"

[node name="PlayersVbox" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="CarButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/PlayersVbox"]
layout_mode = 2
text = "Car"

[node name="FlyAroundButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/PlayersVbox"]
layout_mode = 2
text = "Fly Around"
